--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -15,6 +15,17 @@
   year = {2023}
 }
 
+@article{Larivi_re_2016, 
+ title={Contributorship and division of labor in knowledge production},
+ volume={46},
+ ISSN={1460-3659},
+ DOI={10.1177/0306312716650046},
+ number={3},
+ journal={Social Studies of Science},
+ author={Larivière, Vincent and Desrochers, Nadine and Macaluso, Benoît and Mongeon, Philippe and Paul-Hus, Adèle and Sugimoto, Cassidy R},
+ year={2016},
+ month=jun, pages={417–435} }
+
 %%%%
 @misc{OS_Monitor,
   title = {Open Science Monitor: Trends for open access to publications},
