--- a/analysis/manuscript.Rmd
+++ b/analysis/manuscript.Rmd
@@ -57,7 +57,7 @@ This study combines data from multiple publicly available data sources as visual
 Transformative agreement data retrieved from the cOAlition S Journal Checker Tool provided information about journal portfolios and participating institutions. 
 After identification of hybrid journals, Crossref served as the primary data source for article-level metadata including Creative Commons (CC) license information to determine open access articles on publisher websites.
 OpenAlex provided first author affiliation metadata that were subsequently linked to the transformative agreement data to identify open access articles published through these agreements. 
-In total, the compiled data set consists of `r hoaddata::jn_ind |> filter(!cr_year %in% c("2017", "2023")) |> distinct(issn_l, cr_year, jn_all) |> pull(jn_all) |> sum()` articles published in `r hoaddata::jn_ind |> filter(!cr_year %in% c("2017", "2023")) |> distinct(issn_l) |> nrow()` hybrid journals between 2018 and 2022. 
+
 
 ```{r data_workflow, echo=FALSE, fig.cap="Data collection workflow to obtain article-level transformative agreement data"}
 knitr::include_graphics(here::here("analysis", "data_collection_workflow.pdf"))
@@ -111,18 +111,18 @@ p <-
   labs(xlab = NULL, xlab = NULL)
 ```
 
-Data gathering started with obtaining journals included in transformative agreements using the cOAlition S’ Journal Checker Tool publicly available Transformative Agreement Data dump.[^tadump] 
+Data gathering started with obtaining journals included in transformative agreements using the publicly available Transformative Agreement Data dump[^tadump] used by the cOAlition S Journal Checker Tool.[^checkertool] 
 The dump consisted of multiple online Google spreadsheets where each data file represented one agreement listed in the ESAC Transformative Agreement Registry.[^esacregistry] 
 Each file comprised information about journals and institutions involved per agreement. 
-Because the Journal Checker Tool only only provides data about active transformative agreements, removing data representing expired transformative agreements, four different snapshots were used for this analysis: self-archived version from July 2021, July 2022, and May 2023, as well as the most current dump downloaded on 11 December 2023. 
+Because the Journal Checker Tool only provided data about active transformative agreements, data representing expired transformative agreements were constantly removed. Therefore, four different snapshots were used for this analysis: self-archived version from July 2021, July 2022, and May 2023, as well as the most current dump downloaded on 11 December 2023. 
 This ensured that transformative agreements, which ended in 2021, were included in the analysis.
 Agreements ending before 2021 could not be obtained.
 Overall, the combined Transformative Agreement Data dumps contained `r  length(unique(hoaddata::jct_hybrid_jns$esac_id))` out of `r length(unique(esac_df$ID))` agreements listed in the ESAC registry by December 2023. 
 
-The Transformative Agreement Data dumps linked agreements to journals represented by journal names and ISSN. 
+The Transformative Agreement Data dumps link agreements to journals represented by journal names and ISSN. 
 After mapping ISSN variants to the corresponding linking ISSN (ISSN-L) as provided by The ISSN International Centre, journals were associated to publishers using the ESAC ID, a unique identifier for transformative agreements in the ESAC Transformative Agreement Registry.
-Because transformative agreements can include both full open access and hybrid journals, journal data were complemented with information about a journal's open access status using multiple sources: the Directory of Open Access Journals (DOAJ) downloaded on 12 December 2023[^doaj], OpenAlex (November 2023) and the the Bielefeld list of GOLD OA journals [@goldoa]. 
-In total, `r n_oa_journals` full open access journals were excluded based on journal title matching.
+Because transformative agreements can include both full open access and hybrid journals, the data were complemented with information about a journal's open access status using multiple sources: the Directory of Open Access Journals (DOAJ) downloaded on 12 December 2023[^doaj], OpenAlex (November 2023) and the the Bielefeld list of GOLD OA journals [@goldoa]. 
+In total, `r n_oa_journals` full open access journals were excluded based on ISSN matching.
 Figure shows an overlap between the three data sources of
 `r round(length(unique(Reduce(intersect, my_venn))) / length(unique(Reduce(union, my_venn)))* 100,0)`%.
 However, combining different data sources considerably extended the journal matching to exclude full open access journals from transformative agreements.
@@ -131,28 +131,29 @@ These full open access journals were mostly launched in 2022.
 
 ## Article metadata
 
-After identifying hybrid journals included in transformative agreements, article metadata was retrieved from Crossref and mapped to OpenAlex to obtain affiliation metadata. 
-The Crossref November 2023 database snapshot was used to determine the journals’ yearly publication volume for the 5-year period 2018 to 2022. 
-Because Crossref metadata did not distinguish between research articles and other types of journal content, only included articles published in regular issues indicated by non-numeric pagination were included.
+After identifying hybrid journals included in transformative agreements, article metadata was retrieved from Crossref and mapped to OpenAlex for obtaining author metadata including affiliations. 
+The Crossref November 2023 database snapshot was used to determine the journals’ yearly publication volume for the five-year period 2018 to 2022. 
+Because Crossref metadata lacked information to distinguish between research articles and other types of journal content, only articles published in regular issues indicated by non-numeric pagination were included.
 Furthermore, an expanded version of Unpaywall’s paratext recognition approach was applied to exclude non-scholarly journal content such as table of contents.
 
-Open access articles in hybrid journals were identified through Creative Commons (CC) license information in Crossref metadata and mapped them to the different CC variants. 
+Open access articles in hybrid journals were identified through Creative Commons (CC) license information in Crossref metadata. 
 License information relative to the "accepted manuscript (AM)" version were not considered. 
 Crossref was used for open access identification because transformative agreements generally require publishers to deposit CC license information.
 Comparing Crossref license coverage with OpenAlex, which re-uses open access evidence from Unpaywall, a widely used open access discovery service, revealed a slight discrepancy between these two data sources.
 Overall, `r hoaddata::cr_upw |> filter(cr_year %in% 2018:2022, cat == "Global", issn_l != "0027-8424") |> distinct(issn_l, cr_year, cr_hybrid_total) |> pull(cr_hybrid_total) |> sum()` articles with CC license were retrieved using Crossref, while `r hoaddata::cr_upw |> filter(cr_year %in% 2018:2022, cat == "Global", issn_l != "0027-8424") |> distinct(issn_l, cr_year, upw_hybrid_total) |> pull(upw_hybrid_total) |> sum()` articles were tagged as "hybrid" in OpenAlex. 
-The biggest differences concerned articles published between 2018 and 2020, and among some publishers that presumably did not provide CC license information to Crossref including AIP Publishing, American Physiological Society and Emerald.
-Crossref license metadata was more complete with regard to articles from the publisher Wiley.
-During the data collection, inconsistent open access status information in previous OpenAlex version was observed [@jahn2023], which might explain this discrepancy.
+The biggest differences concerned articles published between 2018 and 2020.
+In 2022, however, Crossref and OpenAlex open access numbers only differ slightly (`r hoaddata::cr_upw |> filter(cr_year %in% 2022, cat == "Global", issn_l != "0027-8424") |> distinct(issn_l, cr_year, cr_hybrid_total) |> pull(cr_hybrid_total) |> sum()` records using Crossref vs. `r hoaddata::cr_upw |> filter(cr_year %in% 2022, cat == "Global", issn_l != "0027-8424") |> distinct(issn_l, cr_year, upw_hybrid_total) |> pull(upw_hybrid_total) |> sum()` in OpenAlex).
+Upon inspection, notable difference could be furthermore observed among some publishers that presumably did not provide CC license information to Crossref including AIP Publishing, American Physiological Society and Emerald.
+Crossref license metadata was more complete with regard to articles from the publisher Wiley and American Chemical Society.
+<!-- During the data collection, inconsistent open access status information in previous OpenAlex versions was observed [@jahn2023], which might explain this discrepancy.-->
 
-Next, the number and proportion of open access articles per journal was calculated. 
+After retrieving article metadata, the publication volume including open access was calculated per journal. 
 To improve the identification of hybrid journals, journals with an open access proportion above 95% were excluded.
 This further step allowed to remove additional `r length(unique(oa_prop$issn_l))` full open access journals.
 
-Affiliation data is a crucial data point for the planning and evaluation of transformative agreements [@Schimmer_2015; @Geschuhn_2017]. 
+Author metadata are crucial for the planning and evaluation of transformative agreements [@Schimmer_2015; @Geschuhn_2017], in particular information about corresponding authors who are generally responsible to arrange open access publication [@Borrego_2020]. 
 Author affiliations were retrieved from OpenAlex.
-Generally, corresponding authors are responsible to arrange open access publication [@Borrego_2020].
-However, because of low coverage, this study focuses on first author and their affiliations.
+However, because of low coverage, this study focused on first authors and their affiliations.
 First authors typically contribute most to a paper and are often considered lead author research papers [@Larivi_re_2016]. 
 Overall, around 90% of studied articles had first author affiliation metadata in OpenAlex, whereas the coverage of articles with corresponding author information was around 54%.
 
@@ -201,8 +202,15 @@ cr_stats_plot <- cr_stats |>
   ) 
 ```
 
+To assess the impact of transformative agreements to hybrid open access, eligible institutions per agreement as listed in the Transformative Agreement Data dump. 
+According to the documentation, data about participating institutions were crowd-sourced from the agreements and consortia that successfully negotiated an agreement.
+Eligible were automatically matched to first author affiliations recorded by OpenAlex using the ROR-ID.
+The matching also took into account the duration of an agreement according to the ESAC registry.
+Upon inspection, Transformative Agreement Data did not cover  associated institutions comprehensively like university hospitals or institutes of large research organisations like the Max Planck Society. 
+To improve the matching, Transformative Agreement Data was automatically enriched with associated institutions. 
+
 In total, the compiled data set consists of `r hoaddata::jn_ind |> filter(issn_l != "0027-8424", !cr_year %in%  c("2017", "2023")) |> distinct(issn_l, cr_year, jn_all) |> pull(jn_all) |> sum()` articles published in `r hoaddata::jn_ind |> filter(issn_l != "0027-8424", !cr_year %in%  c("2017", "2023")) |> distinct(issn_l) |> nrow()` hybrid journals between 2018 and 2022. 
-They represented around 
+Hybrid journals included in transformative agreements represented `r cr_stats |> filter(src == "hoad") |> pull(n_articles) |> sum() / cr_stats |> pull(n_articles) |> sum() * 100`%  of total global output over the same time period according to Crossref, while full open access journals
 
 ```{r method_fig, fig.asp=0.55}
 (p | cr_stats_plot) + plot_annotation(tag_levels = 'A') +  plot_layout(widths = c(0.6, 0.4))
@@ -1357,3 +1365,5 @@ pub_subject_output_plot
 [^esacregistry]: <https://esac-initiative.org/about/transformative-agreements/agreement-registry/>
 
 [^doaj]: <https://doaj.org/csv>
+
+[^checkertool]: <https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/>
