--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -71,9 +71,7 @@ article-level metadata including Creative Commons (CC) license
 information to determine open access articles on publisher websites.
 OpenAlex provided first author affiliation metadata that were
 subsequently linked to the transformative agreement data to identify
-open access articles published through these agreements. In total, the
-compiled data set consists of 8,942,669 articles published in 12,858
-hybrid journals between 2018 and 2022.
+open access articles published through these agreements.
 
 \begin{figure}
 
@@ -89,96 +87,116 @@ hybrid journals between 2018 and 2022.
 data}\label{transformative-agreement-and-hybrid-journal-data}}
 
 Data gathering started with obtaining journals included in
-transformative agreements using the cOAlition S' Journal Checker Tool
-publicly available Transformative Agreement Data dump.\footnote{\url{https://journalcheckertool.org/transformative-agreements/}}
+transformative agreements using the publicly available Transformative
+Agreement Data dump\footnote{\url{https://journalcheckertool.org/transformative-agreements/}}
+used by the cOAlition S Journal Checker Tool.\footnote{\url{https://www.coalition-s.org/blog/enabling-accurate-results-within-the-journal-checker-tool/}}
 The dump consisted of multiple online Google spreadsheets where each
 data file represented one agreement listed in the ESAC Transformative
 Agreement Registry.\footnote{\url{https://esac-initiative.org/about/transformative-agreements/agreement-registry/}}
 Each file comprised information about journals and institutions involved
-per agreement. Because the Journal Checker Tool only only provides data
-about active transformative agreements, removing data representing
-expired transformative agreements, four different snapshots were used
-for this analysis: self-archived version from July 2021, July 2022, and
-May 2023, as well as the most current dump downloaded on 11 December
-2023. This ensured that transformative agreements, which ended in 2021,
-were included in the analysis. Agreements ending before 2021 could not
-be obtained. Overall, the combined Transformative Agreement Data dumps
-contained 729 out of 869 agreements listed in the ESAC registry by
-December 2023.
+per agreement. Because the Journal Checker Tool only provided data about
+active transformative agreements, data representing expired
+transformative agreements were constantly removed. Therefore, four
+different snapshots were used for this analysis: self-archived version
+from July 2021, July 2022, and May 2023, as well as the most current
+dump downloaded on 11 December 2023. This ensured that transformative
+agreements, which ended in 2021, were included in the analysis.
+Agreements ending before 2021 could not be obtained. Overall, the
+combined Transformative Agreement Data dumps contained 729 out of 869
+agreements listed in the ESAC registry by December 2023.
 
-The Transformative Agreement Data dumps linked agreements to journals
+The Transformative Agreement Data dumps link agreements to journals
 represented by journal names and ISSN. After mapping ISSN variants to
 the corresponding linking ISSN (ISSN-L) as provided by The ISSN
 International Centre, journals were associated to publishers using the
 ESAC ID, a unique identifier for transformative agreements in the ESAC
 Transformative Agreement Registry. Because transformative agreements can
-include both full open access and hybrid journals, journal data were
+include both full open access and hybrid journals, the data were
 complemented with information about a journal's open access status using
 multiple sources: the Directory of Open Access Journals (DOAJ)
 downloaded on 12 December 2023\footnote{\url{https://doaj.org/csv}},
 OpenAlex (November 2023) and the the Bielefeld list of GOLD OA journals
 (Bruns et al., 2022). In total, 3,439 full open access journals were
-excluded based on journal title matching. Figure shows an overlap
-between the three data sources of 72\%. However, combining different
-data sources considerably extended the journal matching to exclude full
-open access journals from transformative agreements. The Gold OA
-journals dataset alone adds 176 journals, while the DOAJ comprised 10
-full open access journals not listed in either of the other two sources.
-These full open access journals were mostly launched in 2022.
+excluded based on ISSN matching. Figure shows an overlap between the
+three data sources of 72\%. However, combining different data sources
+considerably extended the journal matching to exclude full open access
+journals from transformative agreements. The Gold OA journals dataset
+alone adds 176 journals, while the DOAJ comprised 10 full open access
+journals not listed in either of the other two sources. These full open
+access journals were mostly launched in 2022.
 
 \hypertarget{article-metadata}{%
 \subsection{Article metadata}\label{article-metadata}}
 
 After identifying hybrid journals included in transformative agreements,
-article metadata was retrieved from Crossref and mapped to OpenAlex to
-obtain affiliation metadata. The Crossref November 2023 database
-snapshot was used to determine the journals' yearly publication volume
-for the 5-year period 2018 to 2022. Because Crossref metadata did not
-distinguish between research articles and other types of journal
-content, only included articles published in regular issues indicated by
-non-numeric pagination were included. Furthermore, an expanded version
-of Unpaywall's paratext recognition approach was applied to exclude
-non-scholarly journal content such as table of contents.
+article metadata was retrieved from Crossref and mapped to OpenAlex for
+obtaining author metadata including affiliations. The Crossref November
+2023 database snapshot was used to determine the journals' yearly
+publication volume for the five-year period 2018 to 2022. Because
+Crossref metadata lacked information to distinguish between research
+articles and other types of journal content, only articles published in
+regular issues indicated by non-numeric pagination were included.
+Furthermore, an expanded version of Unpaywall's paratext recognition
+approach was applied to exclude non-scholarly journal content such as
+table of contents.
 
 Open access articles in hybrid journals were identified through Creative
-Commons (CC) license information in Crossref metadata and mapped them to
-the different CC variants. License information relative to the
-``accepted manuscript (AM)'' version were not considered. Crossref was
-used for open access identification because transformative agreement
-standards require publishers to deposit CC license information.
-Comparing Crossref license coverage with OpenAlex, which re-uses open
-access evidence from Unpaywall, a widely used open access discovery
-service, revealed a slight discrepancy between these two data sources.
-Overall, 847,107 articles with CC license were retrieved using Crossref,
-while 1,055,765 articles were tagged as ``hybrid'' in OpenAlex. The
-biggest differences concerned articles published between 2018 and 2020,
-and among some publishers that presumably did not provide CC license
-information to Crossref including AIP Publishing, American Physiological
-Society and Emerald (\textbf{ludo?}). Crossref license metadata was more
-complete with regard to articles from the publisher Wiley. During the
-data collection, inconsistent open access status information in previous
-OpenAlex version was observed (Jahn et al., 2023), which might explain
-this discrepancy.
+Commons (CC) license information in Crossref metadata. License
+information relative to the ``accepted manuscript (AM)'' version were
+not considered. Crossref was used for open access identification because
+transformative agreements generally require publishers to deposit CC
+license information. Comparing Crossref license coverage with OpenAlex,
+which re-uses open access evidence from Unpaywall, a widely used open
+access discovery service, revealed a slight discrepancy between these
+two data sources. Overall, 742,369 articles with CC license were
+retrieved using Crossref, while 950,260 articles were tagged as
+``hybrid'' in OpenAlex. The biggest differences concerned articles
+published between 2018 and 2020. In 2022, however, Crossref and OpenAlex
+open access numbers only differ slightly (249,511 records using Crossref
+vs.~255,344 in OpenAlex). Upon inspection, notable difference could be
+furthermore observed among some publishers that presumably did not
+provide CC license information to Crossref including AIP Publishing,
+American Physiological Society and Emerald. Crossref license metadata
+was more complete with regard to articles from the publisher Wiley and
+American Chemical Society.
 
-Next, the number and proportion of open access articles per journal was
-calculated. To improve the identification of hybrid journals, journals
-with an open access proportion above 95\% were excluded. This further
-step allowed to remove additional 241 full open access journals.
+After retrieving article metadata, the publication volume including open
+access was calculated per journal. To improve the identification of
+hybrid journals, journals with an open access proportion above 95\% were
+excluded. This further step allowed to remove additional 241 full open
+access journals.
 
-Affiliation data is a crucial data point for the planning and evaluation
-of transformative agreements (Geschuhn \& Stone, 2017; Schimmer et al.,
-2015). Author affiliations were retrieved from OpenAlex. Generally,
-corresponding authors are responsible to arrange open access publication
-(Borrego et al., 2020). However, because of low coverage, this study
-focuses on first author and their affiliations. First authors typically
-contribute most to a paper and are often considered lead author research
-papers (Larivière et al., 2016). Overall, around 90\% of studied
-articles had first author affiliation metadata in OpenAlex, whereas the
-coverage of articles with corresponding author information was around
-54\%.
+Author metadata are crucial for the planning and evaluation of
+transformative agreements (Geschuhn \& Stone, 2017; Schimmer et al.,
+2015), in particular information about corresponding authors who are
+generally responsible to arrange open access publication (Borrego et
+al., 2020). Author affiliations were retrieved from OpenAlex. However,
+because of low coverage, this study focused on first authors and their
+affiliations. First authors typically contribute most to a paper and are
+often considered lead author research papers (Larivière et al., 2016).
+Overall, around 90\% of studied articles had first author affiliation
+metadata in OpenAlex, whereas the coverage of articles with
+corresponding author information was around 54\%.
+
+To assess the impact of transformative agreements to hybrid open access,
+eligible institutions per agreement as listed in the Transformative
+Agreement Data dump. According to the documentation, data about
+participating institutions were crowd-sourced from the agreements and
+consortia that successfully negotiated an agreement. Eligible were
+automatically matched to first author affiliations recorded by OpenAlex
+using the ROR-ID. The matching also took into account the duration of an
+agreement according to the ESAC registry. Upon inspection,
+Transformative Agreement Data did not cover associated institutions
+comprehensively like university hospitals or institutes of large
+research organisations like the Max Planck Society. To improve the
+matching, Transformative Agreement Data was automatically enriched with
+associated institutions.
 
 In total, the compiled data set consists of 8,922,146 articles published
-in 12,857 hybrid journals between 2018 and 2022. They represented around
+in 12,857 hybrid journals between 2018 and 2022. Hybrid journals
+included in transformative agreements represented 40\% of total global
+output over the same time period according to Crossref, while full open
+access journals
 
 \begin{center}\includegraphics[width=0.99\linewidth]{fig/method_fig-1} \end{center}
 
@@ -529,11 +547,6 @@ Geschuhn, K., \& Stone, G. (2017). It's the workflows, stupid! What is
 required to make {``offsetting''} work for the open access transition.
 \emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
 \url{https://doi.org/10.1629/uksg.391}
-
-\leavevmode\vadjust pre{\hypertarget{ref-jahn2023}{}}%
-Jahn, N., Haupka, N., \& Hobert, A. (2023). \emph{Analysing and
-reclassifying open access information in OpenAlex}. Blog post.
-\url{https://subugoe.github.io/scholcomm_analytics/posts/oalex_oa_status/}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Larivi_re_2016}{}}%
 Larivière, V., Desrochers, N., Macaluso, B., Mongeon, P., Paul-Hus, A.,
