--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -26,6 +26,11 @@
  year={2016},
  month=jun, pages={417–435} }
 
+@article{Jahn_2021, title={Toward transparency of hybrid open access through publisher-provided metadata: An article-level study of Elsevier}, volume={73}, ISSN={2330-1643}, url={http://dx.doi.org/10.1002/asi.24549}, DOI={10.1002/asi.24549}, number={1}, journal={Journal of the Association for Information Science and Technology}, publisher={Wiley}, author={Jahn, Najko and Matthias, Lisa and Laakso, Mikael}, year={2021}, month=jul, pages={104--118} }
+
+
+@article{Marwick_2018, title={Packaging Data Analytical Work Reproducibly Using R (and Friends)}, volume={72}, url={http://dx.doi.org/10.1080/00031305.2017.1375986}, DOI={10.1080/00031305.2017.1375986}, number={1}, journal={The American Statistician}, publisher={Informa UK Limited}, author={Marwick, Ben and Boettiger, Carl and Mullen, Lincoln}, year={2018}, pages={80--88} }
+
 %%%%
 @misc{OS_Monitor,
   title = {Open Science Monitor: Trends for open access to publications},
