--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -31,6 +31,20 @@
 
 @article{Marwick_2018, title={Packaging Data Analytical Work Reproducibly Using R (and Friends)}, volume={72}, url={http://dx.doi.org/10.1080/00031305.2017.1375986}, DOI={10.1080/00031305.2017.1375986}, number={1}, journal={The American Statistician}, publisher={Informa UK Limited}, author={Marwick, Ben and Boettiger, Carl and Mullen, Lincoln}, year={2018}, pages={80--88} }
 
+ @article{Butler_2023, title={The oligopoly’s shift to open access: How the big five academic publishers profit from article processing charges}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00272}, DOI={10.1162/qss_a_00272}, journal={Quantitative Science Studies}, publisher={MIT Press}, author={Butler, Leigh-Ann and Matthias, Lisa and Simard, Marc-André and Mongeon, Philippe and Haustein, Stefanie}, year={2023}, month=dec, pages={1–22} }
+
+@article{Zhang_2022, title={Should open access lead to closed research? The trends towards paying to perform research}, volume={127}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-022-04407-5}, DOI={10.1007/s11192-022-04407-5}, number={12}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Zhang, Lin and Wei, Yahui and Huang, Ying and Sivertsen, Gunnar}, year={2022}, month=may, pages={7653–7679} }
+
+
+@misc{priem2022openalex,
+      title={OpenAlex: A fully-open index of scholarly works, authors, venues, institutions, and concepts}, 
+      author={Jason Priem and Heather Piwowar and Richard Orr},
+      year={2022},
+      eprint={2205.01833},
+      archivePrefix={arXiv},
+      primaryClass={cs.DL}
+}
+
 %%%%
 @misc{OS_Monitor,
   title = {Open Science Monitor: Trends for open access to publications},
